--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name":"React App RoboFriends",
+  "short_name":"RoboFriends",
+  "icons":
+  [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src":"logo192.png",
+      "sizes":"192x192",
+      "type":"image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src":"logo512.png",
+      "sizes":"512x512",
+      "type":"image/png"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
-}
+    "start_url": ".",
+    "theme_color":"#999999",
+    "background_color":"#999999",
+    "display":"standalone"
+  }
